Unable to remove added keying set from context menu #94129

Closed
opened 2021-12-15 22:02:13 +01:00 by hisham · 14 comments
First-time contributor

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 440/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (NONE i tried all 2.9 versions):

Short description of error

adding something to the "keying set menu" removes the default keying set and you can't remove anything you added and it does not even give a menu to choose the thing you wanna animate

also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected or something else is selected and it keys multiple opjects

Exact steps for others to reproduce the error

  • Open default scene
  • Add anything to the keying set menu (from object properties tab -> RMB on scale -> Add all/single to keying set)
  • And then try to remove it (RMB -> Remove from keying set)

Screenshot (28).png

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 440/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (NONE i tried all 2.9 versions): **Short description of error** adding something to the "keying set menu" removes the default keying set and you can't remove anything you added and it does not even give a menu to choose the thing you wanna animate also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected or something else is selected and it keys multiple opjects **Exact steps for others to reproduce the error** - Open default scene - Add anything to the keying set menu (from object properties tab -> RMB on scale -> Add all/single to keying set) - And then try to remove it (RMB -> Remove from keying set) ![Screenshot (28).png](https://archive.blender.org/developer/F12750297/Screenshot__28_.png)
Author
First-time contributor

Added subscriber: @HisHam

Added subscriber: @HisHam
Author
First-time contributor

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
First-time contributor

Removed subscriber: @HisHam

Removed subscriber: @HisHam
Author
First-time contributor

Added subscriber: @HisHam

Added subscriber: @HisHam
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Member

Looks like this was never properly triaged and therefore never seen by devs since you set it to confirmed without assigning any module or person. (I was looking for something else and came across this)

Looks like this was never properly triaged and therefore never seen by devs since you set it to confirmed without assigning any module or person. (I was looking for something else and came across this)
Author
First-time contributor

ah my bad, I found that you can just edit the 'keying sets' properties from the scene properties tab so it's not that big of a bug

ah my bad, I found that you can just edit the 'keying sets' properties from the scene properties tab so it's not that big of a bug
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Thanks for the report. I think I can reproduce.
Nothing gets printed in Info editor when I execute Remove from keying set operation
Also, I ran bpy.ops.anim.keyingset_button_remove() (mentioned in python tooltip) in python console but it did not finish the operation (returns CANCELLED)
However, bpy.ops.anim.keying_set_remove() removes the keying set.
@dr.sybren hi, can you check this report?

also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected

I'm not very sure about this one.

Thanks for the report. I think I can reproduce. Nothing gets printed in Info editor when I execute `Remove from keying set` operation Also, I ran ` bpy.ops.anim.keyingset_button_remove()` (mentioned in python tooltip) in python console but it did not finish the operation (returns `CANCELLED`) However, `bpy.ops.anim.keying_set_remove()` removes the keying set. @dr.sybren hi, can you check this report? > also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected I'm not very sure about this one.
Pratik Borhade changed title from adding something to keying set is BROKEN to Unable to remove added keying set from context menu 2022-03-18 13:40:47 +01:00
Author
First-time contributor

also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected

I'm not very sure about this one.

that's the intended behavior i think, i knew after reading about keying sets in the manual

also, I didn't know adding a custom keying set makes it the active keying set in the keying popover since i never use the popover but you can just remove it from the popover and the insert keyframe menu will be back, its weird because now i'll have to select and deselect the custom keying set i made whenever i want to edit it, if i wanted to have the insert keyframe menu showing up when i press "i"

>> also when you try to animate the stuff you added to the keying set menu it keys everything you added even if the object is not selected > I'm not very sure about this one. that's the intended behavior i think, i knew after reading about keying sets in the manual also, I didn't know adding a custom keying set makes it the active keying set in the keying popover since i never use the popover but you can just remove it from the popover and the insert keyframe menu will be back, its weird because now i'll have to select and deselect the custom keying set i made whenever i want to edit it, if i wanted to have the insert keyframe menu showing up when i press "i"
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:35:15 +01:00
Member

This was reported again in #111371, got a fix, will put up a PR shortly.

This was reported again in #111371, got a fix, will put up a PR shortly.
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-08-22 10:32:08 +02:00
Philipp Oeser self-assigned this 2023-08-22 10:32:14 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-23 09:40:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94129
No description provided.