Fix #94129: Unable to remove added keying set from context menu

Mistake in (7-year-old) f6c09eadf061.

The operator was just cancelled if the right button was found, instead
it should only cancel if the button is _not_ found.

Pull Request: https://projects.blender.org/blender/blender/pulls/111373